# narris

./: .gitignore  CLAUDE.md  PRD.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  docx.rs  epub.rs  lib.rs  main.rs  pdf.rs
src/components/: CharacterSheets.tsx  CommentPane.tsx  CoverEditor.tsx  DevicePreviewer.tsx  Editor.tsx  EditorView.tsx  ExportDialog.tsx  FindReplace.tsx  FormatPanel.tsx  ImageManager.tsx  MasterPages.tsx  PlotCanvas.tsx  PlotSidebar.tsx  ProjectSettings.tsx  ProjectSpace.tsx  Sidebar.tsx  SnapshotPanel.tsx  SprintTimer.tsx  ThemeBuilder.tsx  WritingHabits.tsx
src/extensions/: CommentHighlight.ts  Footnote.ts  InlineImage.ts  TextMessage.ts
src/lib/: commands.ts
src/stores/: chapterStore.ts  formattingStore.ts  goalsStore.ts  projectStore.ts  themeStore.ts
